# INDE-577

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/Supervised_Learning/Decision_Trees/: Decision_Trees.ipynb  README.md
examples/Supervised_Learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
examples/Supervised_Learning/KNN/: KNN.ipynb  README.md
examples/Supervised_Learning/Linear_Regression/: Linear_Regression.ipynb  README.md
examples/Supervised_Learning/Logistic_Regression/: Logistic_Regression.ipynb  README.md
examples/Supervised_Learning/Multilayer_Perceptron/: Multilayer_Perceptron.ipynb  README.md
examples/Supervised_Learning/Perceptron/: Perceptron.ipynb  README.md
examples/Supervised_Learning/Random_Forests/: README.md  Random_Forests.ipynb
examples/Supervised_Learning/Regression_Trees/: README.md  (+1 more)
examples/data/: Mining_small.csv  auto-mpg.csv  bank-additional-small.csv
src/rice_ml/: __init__.py  community_detection.py  dbscan.py  decision_trees.py  distance_metrics.py  ensemble_methods.py  kmeans.py  knn.py  label_propagation.py  linear_regression.py  logistic_regression.py  multilayer_perceptron.py  pca.py  perceptron.py  random_forest.py  regression_trees.py
tests/: test_community_detection.py  test_dbscan.py  test_decision_trees.py  test_distance_metrics.py  test_ensemble_methods.py  test_kmeans.py  test_knn.py  test_label_propagation.py  test_linear_regression.py  test_logistic_regression.py  test_multilayer_perceptron.py  test_pca.py  test_perceptron.py  test_random_forest.py  test_regression_trees.py
(+10 files in other folders)
